--- a/pig-game/index.html
+++ b/pig-game/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
+  <a class="btn" href="../index.html" style="margin-top: -670px;">Back </a>
+
   <main>
+
     <!-- first player section -->
     <section class="player player--0 player--active">
       <h2 class="name" id="name--0">Player 1</h2>
